# whistle

./: .gitignore  README.md  build.sh  install.sh  pyproject.toml
.github/workflows/: release.yml
whistle/: __main__.py  alert.py  config.py  llm.py  test_cases.py
whistle_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
